mobilerobotics_ws/log/build_2023-11-27_15-09-43/pathing/stderr.log
  File "/home/april/mobilerobotics_ws/install/pathing/lib/python3.8/site-packages/pathing/better_soccer.py", line 100
    obstacles = [self.obs*, self.ball, self.reference, self.marker]
                          ^
SyntaxError: invalid syntax

